--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Hello World
         </title>
-        <link rel="stylesheet" href="blue.css">
+        <link rel="stylesheet" href="bluestyle.css">
     </head>
     <body>
         <p>
