--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <p>This is the first file in my new Git Repo.</p>
         <h1>TOTO</h1>
         <h2> coco</h2>
+		
+		<div>
+		<img src="image.jpg" alt="hello word from space"
+		style="width:100%; max:500px">
+		</img>
     </body>
 </html>
