--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 		
 		<div>
 		<img src="image.jpg" alt="hello word from space"
-		style="width:100%; max:500px">
+		style="width:50%; max:500px">
 		</img>
+		</div>
+		<div>
+		<img src="image2.jpg" alt="hello word from space"
+		style="width:50%; max:500px">
+		</img>
+		</div>
     </body>
 </html>
